--- a/MemoryCardsProject/en.lproj/Localizable.strings
+++ b/MemoryCardsProject/en.lproj/Localizable.strings
@@ -15,4 +15,4 @@
 "Share" = "Share";
 "Cards" = "Cards";
 "Language" = "Language";
-"Congratulations" = "Congratulations";
+"GameBoard" = "Game Board";
